assets/custom.css
/* ... */
/* ==========================================================================
   Responsive — Tablet & Narrow Desktop
   ========================================================================== */

@media only screen and (min-width: 990px) and (max-width: 1000px) {
  .header--middle-left {
    column-gap: 0rem;
  }

  header.header.header--middle-left.page-width.header--has-menu {
    padding: 0 2rem;
  }
}

@media only screen and (min-width: 750px) {
  .image-with-text__media img {
    max-width: 300px;
  }
}

@media only screen and (max-width: 992px) {
  .head2_text p {
    font-size: 45px;
    line-height: 50px;
  }

  .head1_text p {
    font-size: 32px;
    line-height: 35px;
  }
}

/* ==========================================================================
   Responsive — Mobile (749px and below)
   ========================================================================== */

@media only screen and (max-width: 749px) {
  .home_newslatter_input {
    flex-wrap: wrap;
    padding: 0 20px;
  }

  .rich-text__heading span {
    font-size: 30px;
  }

  .rich-text__text.rte p {
    font-size: 18px;
    line-height: 30px;
  }

  .collection__title.title-wrapper h2.title.h1:after {
    top: 65%;
  }

  .findus-richsubtitle,
  .findus-storestitle {
    font-size: 24px;
  }

  .pf-image-left,
  .image-text-main {
    width: 100%;
    text-align: center;
    padding: 10px;
  }

  .pf-image-left img {
    width: 100%;
    max-width: 280px;
    height: auto;
  }

  .content-body {
    font-size: 1.2rem;
    line-height: 1.5;
    max-width: 100%;
  }

  .only-text-main {
    margin: 35px 0;
  }

  .our-caco {
    padding: 10px;
  }

  ul.single-usp {
    max-width: 500px;
  }

  li.single-usp__item {
    width: 100%;
  }

  .box-banner img {
    height: 340px;
  }

  .contact__fields .field {
    width: 100%;
    margin: 0 auto;
  }

  .collection__title.title-wrapper h2.title.h1 {
    font-size: 30px;
    padding-top: 0;
  }

  .title.h1 {
    font-size: 30px;
  }

  .text-with-custom p {
    font-size: 18px;
    line-height: 28px;
  }

  .head2_text p {
    font-size: 60px;
    line-height: 72px;
    font-family: var(--font-heading-family);
  }

  .head1_text p {
    font-size: 44px;
    line-height: 60px;
    font-weight: 700;
    font-style: italic;
    font-family: var(--font-heading-family);
  }

  .price__regular .price-item--regular,
  .quick-add__submit {
    font-size: 12px;
    line-height: 28px;
  }

  .card__heading a {
    font-size: 14px;
    line-height: 24px;
  }

  h2.banner__heading {
    font-size: 40px;
    line-height: 70px;
  }

  .quick-add__submit span.add_submit_text {
    letter-spacing: 1px;
  }

  .pf-image-left img {
    max-width: 100%;
    border: 0;
    vertical-align: middle;
  }

  .findus-newstitle {
    font-size: 25px;
  }

  .findus-newstext {
    font-size: 18px;
  }

  .page-newsletter-form input {
    font-size: 16px;
  }

  .page-newsletter-form #subscribe {
    font-size: 20px;
  }

  /* Footer mobile */
  .footer-block.grid__item .list-social,
  .footer-block__details-content a {
    justify-content: center;
  }

  .footer-block.grid__item {
    text-align: center;
  }

  .first_image_mission img {
    transform: scale(1.3);
    padding: 50px 0px 20px;
  }

  .template-index .collection .quick-add .price {
    line-height: 0;
  }

  .price__regular .price-item--regular {
    font-size: 17px;
  }

  .template-product .price__regular .price-item--regular {
    font-size: 23px;
  }
}

/* ==========================================================================
   Responsive — Small Tablet (481px - 749px)
   ========================================================================== */

@media only screen and (min-width: 481px) and (max-width: 749px) {
  .multicolumn-list.contains-content-container {
    padding-left: 50px;
    padding-right: 50px;
  }
}

@media only screen and (min-width: 568px) and (max-width: 767px) {
  .medium--one-half {
    width: 50%;
  }
}

/* ==========================================================================
   Responsive — Small Mobile (480px and below)
   ========================================================================== */

@media only screen and (max-width: 480px) {
  h2.collapsible-content__heading.h1 {
    font-size: 24px;
  }

  ul.single-usp {
    padding-left: 10px;
  }

  .card__heading a {
    font-size: 11px;
    line-height: 16px;
  }

  .wrapper p {
    font-size: 14px;
  }

  h2.top-text-icon {
    font-size: 15px;
  }

  .collection__title.title-wrapper h2.title.h1 {
    font-size: 25px;
  }

  .title.h1 {
    font-size: 25px;
  }

  .rich-text__heading span {
    font-size: 25px;
  }

  .button--full-width {
    flex-wrap: wrap;
  }

  .price__regular .price-item--regular,
  .quick-add__submit {
    line-height: 12px;
  }

  h2.banner__heading {
    font-size: 30px;
    line-height: 50px;
  }

  .head1_text p {
    font-size: 25px;
    line-height: 35px;
  }

  .head2_text p {
    font-size: 35px;
    line-height: 45px;
  }
}

/* ==========================================================================
   Responsive — Extra Small (425px and below)
   ========================================================================== */

@media only screen and (max-width: 425px) {
  .first_image_mission img {
    transform: scale(1.5);
    padding: 50px 0px 20px;
  }
}
/* ... */

